NEWS
====
**minval v.0.2**
* A bug in compartment function was solved
* Some functions were rewrited

**minval v.0.1**
* ChEBI database release 136 was added.
* The stoichiometric reactions from the reconstructon of the glutamate/glutamine cycle were added.