@@ -1,8 +1,8 @@
 Package: minval
 Type: Package
 Title: MINimal VALidation for Stoichiometric Reactions
-Version: 0.2
-Date: 2016-02-13
+Version: 0.3
+Date: 2016-03-15
 Author: Daniel Osorio [aut,cre], Janneth Gonzalez [aut], Andres Pinzon-Velasco
     [aut]
 Maintainer: Daniel Osorio <dcosorioh@unal.edu.co>
