@@ -14,10 +14,10 @@ products <- function(reaction){
   }
   # Split independient reactants
   products <- unlist(strsplit(products,"[[:blank:]]\\+[[:blank:]]"))
-  products <- gsub("^[[:blank:]]","",products)
-  products <- gsub("[[:blank:]]$","",products)
+  products <- gsub("^[[:blank:]]*","",products)
+  products <- gsub("[[:blank:]]*$","",products)
   # Use a regex to extract stoichiometric coefficients and separate the metabolite name
-  products <- gsub("^[[:digit:]]+[[:punct:]]?[[:digit:]]?[[:digit:]]?[[:blank:]]","",products)
+  products <- gsub("^[[:digit:]][[:graph:]]*[[:blank:]]","",products)
   return(products)
 }
 
